Config fonts and varibles and colors

--- a/src/assets/stylus/1-settings/_colors-base.styl
+++ b/src/assets/stylus/1-settings/_colors-base.styl
@@ -15,8 +15,8 @@ $clr-white = #ffffff
 
 $clr-discord  = #738ADB
 $clr-facebook = #3b5999
-$clr-google   = #dc4e41
-$clr-twich    = #9147FF
+$clr-google   = #F13329
+$clr-twich    = #9059F6
 $clr-twitter  = #55acee
 $clr-youtube  = #e52d27
 
