--- a/src/assets/stylus/1-settings/_colors-project.styl
+++ b/src/assets/stylus/1-settings/_colors-project.styl
@@ -5,7 +5,7 @@
 // colour of text and main colour overall
 $clr-primary    = #FA9FB0
 // colour of any components, backgrounds, etc.
-$clr-secondary  = #292845
+$clr-secondary  = #F38392
 // special colour to complement secondary colour
 $clr-tertiary   = #18181B
 
