--- a/src/assets/stylus/1-settings/_typography.styl
+++ b/src/assets/stylus/1-settings/_typography.styl
@@ -8,5 +8,5 @@ $font-default-height  = '1.5'
 $font-default-size    = 16px
 $font-default-weight  = 400
 
-$font-streamer = 'Secular One', sans-serif
-$font-streamer-title = 'Amatic SC', cursive
+$font-streamer-title = 'Secular One', sans-serif
+$font-streamer-subtitle = 'Amatic SC', cursive
