--- a/src/assets/stylus/3-generic/_fonts.styl
+++ b/src/assets/stylus/3-generic/_fonts.styl
@@ -3,3 +3,5 @@
 //  ==========================================================================
 
 // @import url('.../stylesheet.css');
+  @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
